Исправлен contact.sql Тесты не запускаются

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -3,4 +3,4 @@ jdbc.username=postgres
 jdbc.password=lXX8QPuOrDHi
 jdbc.initialSize=5
 jdbc.maxActive=10
-jdbc.driverClassName=org.postgresql.Drive
+jdbc.driverClassName=org.postgresql.Driver
