--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "io.spring.dependency-management" version "1.1.0"
 }
 
 group = 'org.example'
@@ -11,15 +12,25 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework:spring-jdbc:5.3.3'
-    implementation 'org.springframework:spring-context:5.3.3'
-    implementation 'commons-dbcp:commons-dbcp:1.4'
-    implementation 'org.postgresql:postgresql:42.2.18'
+    // https://mvnrepository.com/artifact/org.springframework/spring-jdbc
+    implementation group: 'org.springframework', name: 'spring-jdbc', version: '5.3.3'
+    // https://mvnrepository.com/artifact/org.springframework/spring-context
+    implementation group: 'org.springframework', name: 'spring-context', version: '5.3.3'
 
-    testCompileOnly('org.springframework:spring-test:5.3.3')
-    testCompileOnly('org.assertj:assertj-core:3.19.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    // https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp
+    implementation group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
+    // https://mvnrepository.com/artifact/org.postgresql/postgresql
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.5.3'
+
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test
+    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '3.0.2'
+
+    // https://mvnrepository.com/artifact/org.springframework/spring-test
+    testImplementation group: 'org.springframework', name: 'spring-test', version: '6.0.4'
+
+    //1testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 }
 
 tasks.named('test') {
